@@ -42,6 +42,7 @@ typedef struct {
 } HEADDATA;
 
 extern unsigned int readsfv(const char *, struct VARS *, int);
+extern char *get_first_filename_from_sfvdata(const char *);
 extern void update_sfvdata(const char *, const char *, const unsigned int);
 extern void delete_sfv(const char *, struct VARS *);
 extern void readrace(const char *, struct VARS *, struct USERINFO **, struct GROUPINFO **);
