@@ -2,6 +2,8 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Fixed bug where not all data was available in the cookies for
+		  the complete bar when the sfv was uploaded last.
 		- Changed get_rar_info methodcall in preparation for a bugfix.
 		- Made comment-removal in sfvs to be separately definable.
 		  Now you can have a cleanup of the sfv while still keeping
